# crypto_mcp

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
docs/problems/: 001-slow-sequential-tool-calls.md
scripts/: benchmark_batch.py
src/crypto_mcp/: __init__.py  __main__.py  cache.py  config.py  server.py
src/crypto_mcp/exceptions/: __init__.py  base.py
src/crypto_mcp/exchanges/: __init__.py  base.py
src/crypto_mcp/exchanges/binance/: __init__.py  client.py  endpoints.py  exceptions.py  models.py
src/crypto_mcp/exchanges/bybit/: __init__.py  client.py  endpoints.py  exceptions.py  models.py
src/crypto_mcp/models/: __init__.py  common.py  responses.py
src/crypto_mcp/tools/: __init__.py  _utils.py  derived_metrics.py  funding_rate.py  klines.py  long_short_ratio.py  mark_price.py  open_interest.py  open_interest_history.py  ticker.py
src/crypto_mcp/utils/: __init__.py  cache.py  rate_limiter.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_server.py
tests/performance/: __init__.py  conftest.py  test_batch_tools.py  test_caching.py  test_connection_pool.py  test_deduplication.py  test_derived_metrics.py  test_exchange_info.py  test_extended_responses.py  test_liquidation_history.py  test_retry.py  test_websocket.py
tests/unit/: __init__.py  test_config.py
tests/unit/tools/: __init__.py  test_funding_rate.py  test_klines.py  test_long_short_ratio.py  test_mark_price.py  test_open_interest.py  test_open_interest_history.py  test_ticker.py
tests/unit/utils/: test_rate_limiter.py
(+4 files in other folders)
